--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,71 @@
-# Aiken compilation artifacts
-artifacts/
-# Aiken's project working directory
-build/
-# Aiken's default documentation export
-docs/
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+lerna-debug.log*
+.pnpm-debug.log*
+
+# Diagnostic reports (https://nodejs.org/api/report.html)
+report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
+
+# Runtime data
+pids
+*.pid
+*.seed
+*.pid.lock
+
+# Dependency directories
+node_modules/
+
+# TypeScript cache
+*.tsbuildinfo
+
+# Optional npm cache directory
+.npm
+
+# Optional eslint cache
+.eslintcache
+
+# Optional stylelint cache
+.stylelintcache
+
+# Output of 'npm pack'
+*.tgz
+
+# Yarn Integrity file
+.yarn-integrity
+
+# dotenv environment variable files
+.env
+.env.development.local
+.env.test.local
+.env.production.local
+.env.local
+
+# Stores VSCode versions used for testing VSCode extensions
+.vscode-test
+
+# yarn v2
+.yarn/cache
+.yarn/unplugged
+.yarn/build-state.yml
+.yarn/install-state.gz
+.pnp.*
+
+# merkle patricia tree db
+*-db/
+
+# env files
+.env*.local
+
+# out dir
+/lib/
+
+# test db
+test-db/
+whitelist-test-db/
+initial-whitelist-test-db/
+smart-contract/libssl1.1_1.1.1f-1ubuntu2.24_amd64.deb
+smart-contract/plutus.json
