--- a/package.json
+++ b/package.json
@@ -38,7 +38,10 @@
     "@helios-lang/tx-utils": "0.6.22",
     "@helios-lang/uplc": "0.7.17",
     "@koralabs/kora-labs-common": "6.1.12",
+    "@meshsdk/core": "1.9.0-beta.72",
     "dotenv": "16.5.0",
+    "memoize": "^10.1.0",
+    "superstruct": "^2.0.2",
     "ts-res": "1.3.0"
   },
   "devDependencies": {
